--- a/README
+++ b/README
@@ -84,7 +84,7 @@ following commands:
 You can create and edit your own DTS using a command similar to:
 
         # vim arch/arm64/boot/dts/xilinx/the_file_you_edit*.dts
-	# make xilinx/zynqmp-zcu102.dtb
+	# make xilinx/zynqmp-zcu102-rev1.0.dtb
 
 The resulting DTB file can be found here:
 path_to_project/build/linux-windriver/linux-<board>-<kernel type>-build/arch/arm64/boot/dts/xilinx/
@@ -151,7 +151,7 @@ bootable card. Deploy the kernel image, DTB image and file system image as follo
 	# umount /mnt/sd
 	# mount /dev/mmcblk0p1 /mnt/sd
 	# cp path_to_Image /mnt/sd/boot
-	# cp path_to_zynqmp-zcu102.dtb /mnt/sd/boot
+	# cp path_to_zynqmp-zcu102-rev1.0.dtb /mnt/sd/boot
 	# umount /mnt/sd
 
 4.2.2 Set the u-boot environment variables and boot from SD card
@@ -162,7 +162,7 @@ Run the following command to load the kernel image and DTB image:
 	=> setenv bootargs console=ttyPS0,115200 root=/dev/mmcblk0p2 rw rootwait earlycon=cdns,mmio,0xFF000000,115200n8
 	=> mmc rescan
 	=> fatload mmc 0 0x10000000 Image
-	=> fatload mmc 0 0x11800000 zynqmp-zcu102.dtb
+	=> fatload mmc 0 0x11800000 zynqmp-zcu102-rev1.0.dtb
 	=> booti 0x10000000 - 0x11800000
 
 
