--- a/README
+++ b/README
@@ -189,33 +189,24 @@ http://www.yoctoproject.org/docs/2.2/mega-manual/mega-manual.html#creating-parti
 After having built your project, a partitioned WIC image will be created in the
 deploy folder as follows:
 
-  path_to_your_project/build/tmp/deploy/images/xilinx-zynqmp/wrlinux-image-glibc-<rootfs_type>-xilinx-zynqmp.wic
+  path_to_your_project/build/tmp-glibc/deploy/images/xilinx-zynqmp/wrlinux-image-glic-<rootfs_type>-xilinx-zynqmp.wic
 
 There are two partitions in this WIC images, the first one is to hold the boot
-images, the second is the related root file system. Currently the first one is
-just a hold place, the end user needs to deploy their own u-boot files properly.
+images, the second is the related root file system.
 
 6.1 An example to deploy bootloader into the first partition
 ------------------------------------------------------------
 
-0) Change the first partition of the WIC image above into FAT16
-
-   $ sudo fdisk wrlinux-image-glibc-<rootfs_type>-xilinx-zynqmp.wic
-
-   # Type the command "t" from keyboard, then press "1" to select the first
-     partition, and "6" next to select FAT16.
-     Type the command "wq" to quit and save the changes.
-
 1) Deploy the created WIC image into SD card(/dev/sdx) in your host machine.
 
    $ sudo dd if=wrlinux-image-glibc-<rootfs_type>-xilinx-zynqmp.wic of=/dev/sdx
-   $ sudo mkfs.fat /dev/sdx1
 
-2) Deploy the related bootloader files into /dev/sdx1
+2) Download binary bootloader from the vendor website, and deploy BOOT.BIN into
+   /dev/sdx1
 
-   $ sudo mount /dev/sdx1 path_to_mountpoint_sdx1
-   $ cp -r path_to_your_bootloader/* path_to_mountpoint_sdx1
-   $ sync; sudo umount path_to_mountpoint_sdx1
+   $ sudo mount /dev/sdx1 path_to_sdx1
+   $ cp -r path_to_your_bootloader/BOOT.BIN path_to_sdx1
+   $ sync; sudo umount path_to_sdx1
 
 6.2 boot the board from the WIC SD card
 ---------------------------------------
