--- a/README
+++ b/README
@@ -9,7 +9,7 @@ Please refer to README.hardware for hardware specific information.
 Dependencies
 ------------
 This layer depends on the oe-core version supplied with Wind River Linux
-and the wr-kernel layer.
+and the wrlinux layer.
 
 
 Maintenance
@@ -21,7 +21,7 @@ information on submitting changes.
 
 Building the zynqmp layer
 -----------------------------
-This layer and wr-kernel layer should be added to bblayers.conf.
+This layer and wrlinux layer should be added to bblayers.conf.
 
 
 License
@@ -300,7 +300,13 @@ information.
    root@xilinx-zynqmp:~# tri_x11
    EGL_VERSION = 1.4 Linux-r7p0-00rel0
 
-8.2 Notes:
+8.2 Audio Play
+--------------
+Connect loudspeaker or headset with display monitor, and then run below commands:
+ # aplay -l
+ # speaker-test -c2 -twav
+
+8.3 Notes:
 ---------
 It seems mesa-demos are not compatible with libmali-xlnx, so not all test cases
 can be passed, and we'll keep them as-is since debugging binary lib has not too
@@ -329,12 +335,14 @@ SDK 2017.4 and 2018.1, otherwise it might incur the sudden crash.
 On xilinx-zynqmp platform, customer is able to update their own FPGA design image
 from linux side in running time. Detail example as below:
 
-1. Prepare FPGA bitstream file
+11.1. Prepare FPGA bitstream file
+---------------------------------
 Download a xilinx prebuilt bitstream file with below link:
-https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/18842330/Zynq2017.4+Release?preview=/18842330/18845572/2017.4-zcu102-release.tar.xz
-Then, extract the .bit file from package 2017.4-zcu102-release.tar.xz and rename it into system.bit
+https://www.xilinx.com/member/forms/download/xef.html?filename=2018.2-zcu102-release.tar.xz
+Then, extract the .bit file from package 2018.2-zcu102-release.tar.xz and rename it into system.bit
 
-2. Generate binary file.
+11.2. Generate binary file
+--------------------------
 Because xilinx-zynqmp platform only supports binary format for updating FPGA, it is need
 to change the .bit file into binary format with below commands:
  - set environment variable
@@ -353,9 +361,33 @@ to change the .bit file into binary format with below commands:
 
  - The output bin file is system.bit.bin
 
-3. Deploy system.bit.bin file in SD card or other storage medium
+11.3. Deploy required files
+---------------------------
+Deploy system.bit.bin and zynqmp-zcu102-fpga-update.dtb file in SD card or other storage medium.
+The dtb is generated in below directory:
+<ProjectPath>/build/tmp-glibc/work/xilinx_zynqmp-wrs-linux/linux-yocto/<kernel-version>/linux-xilinx_zynqmp-standard-build/arch/arm64/boot/dts/xilinx
 
-4. Update FPGA bitstream file
+11.4. Update FPGA bitstream file
+--------------------------------
+11.4.1 Update FPGA by using device tree overlay
+Boot up kernel and login, then run below commands in terminal.
+1) Set flags for Full Bitstream.
+	# echo 0 > /sys/class/fpga_manager/fpga0/flags
+
+2) Copy the Full Bitstream (.bin) and pl.dtbo files into firmware folder
+	# mkdir -p /lib/firmware
+	# cp xxx/system.bit.bin /lib/firmware/system.bit.bin
+	# cp xxx/zynqmp-zcu102-fpga-update.dtb /lib/firmware/zynqmp-zcu102-fpga-update.dtb
+
+3) Apply overlay DTB(zynqmp-zcu102-fpga-update.dtb) to add live device nodes
+	# mkdir /sys/kernel/config/device-tree/overlays/system
+	# cd /lib/firmware/
+	# echo zynqmp-zcu102-fpga-update.dtb > /sys/kernel/config/device-tree/overlays/system/path
+
+4) Steps to remove device nodes
+	# rmdir /sys/kernel/config/device-tree/overlays/system
+
+11.4.2 Update FPGA by using sysfs interface
 Boot up kernel and login, then run below commands in terminal.
 # echo 0 > /sys/class/fpga_manager/fpga0/flags
 # mkdir -p /lib/firmware
@@ -363,7 +395,8 @@ Boot up kernel and login, then run below commands in terminal.
 # cd /lib/firmware
 # echo system.bit.bin > /sys/class/fpga_manager/fpga0/firmware
 
-Note:
+11.5 Note
+---------
 If customer wants to enable new peripherals that reside in the new FPGA bitstream from linux side,
 overlay solution is able to implement the requirement. Detail description, please refer to below link.
 https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/18841847/Solution+ZynqMP+PL+Programming#x-Programming+the+PL+through+Linux
