--- a/README
+++ b/README
@@ -332,11 +332,11 @@ from linux side in running time. Detail example as below:
 1. Prepare FPGA bitstream file
 Download a xilinx prebuilt bitstream file with below link:
 https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/18842330/Zynq2017.4+Release?preview=/18842330/18845572/2017.4-zcu102-release.tar.xz
-And then, extract the .bit file from package 2017.4-zcu102-release.tar.xz. For example, the bitstream file is system.bit
+Then, extract the .bit file from package 2017.4-zcu102-release.tar.xz and rename it into system.bit
 
 2. Generate binary file.
 Because xilinx-zynqmp platform only supports binary format for updating FPGA, it is need
-to change the .bit file into binary format with below command:
+to change the .bit file into binary format with below commands:
  - set environment variable
  # source xxx/Vivado/Vivado/2017.4/settings64.sh
 
@@ -356,7 +356,7 @@ to change the .bit file into binary format with below command:
 3. Deploy system.bit.bin file in SD card or other storage medium
 
 4. Update FPGA bitstream file
-Boot up kernel and login, then run below command in terminal.
+Boot up kernel and login, then run below commands in terminal.
 # echo 0 > /sys/class/fpga_manager/fpga0/flags
 # mkdir -p /lib/firmware
 # cp xxx/system.bit.bin /lib/firmware/system.bit.bin
@@ -364,6 +364,6 @@ Boot up kernel and login, then run below command in terminal.
 # echo system.bit.bin > /sys/class/fpga_manager/fpga0/firmware
 
 Note:
-If customer want to enable new peripherals that reside in the new FPGA bitstream from linux side,
+If customer wants to enable new peripherals that reside in the new FPGA bitstream from linux side,
 overlay solution is able to implement the requirement. Detail description, please refer to below link.
 https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/18841847/Solution+ZynqMP+PL+Programming#x-Programming+the+PL+through+Linux
